editor/tree-sitter-slint/corpus/expressions.txt
// Copyright © SixtyFPS GmbH <info@slint-ui.com>
// SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-commercial

================================================================================
Relative properties
================================================================================

Example := Rectangle {
    foo := Rectangle {
        x: 42px;
    }
     x: foo.x;
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (user_type_identifier)
    (user_type_identifier)
    (field_declaration_list
      (field_declaration_list_body
        (component_definition
          (user_type_identifier)
          (user_type_identifier)
          (field_declaration_list
            (field_declaration_list_body
              (variable_set_equal
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (value_with_units
                    (number
                      (int_number))
                    (unit_type)))))))
        (variable_set_equal
          (var_identifier)
          (assignment_prec_operator)
          (var_identifier
            (post_identifier)))))))

================================================================================
Ternary Expression
================================================================================

Example := Window {
    Rectangle {
        background: touch.pressed ? #111 : #eee;
    }
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (user_type_identifier)
    (user_type_identifier)
    (field_declaration_list
      (field_declaration_list_body
        (component_definition
          (user_type_identifier)
          (field_declaration_list
            (field_declaration_list_body
              (variable_set_equal
                (var_identifier)
                (assignment_prec_operator)
                (ternary_expression
                  (var_identifier
                    (post_identifier))
                  (value
                    (color))
                  (value
                    (color)))))))))))

================================================================================
Chained ternary Expression
================================================================================

Example := Window {
    Rectangle {
        border-color: !touch.enabled ? #888
            : touch.pressed ? #aaa
            : #555;
    }
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (user_type_identifier)
    (user_type_identifier)
    (field_declaration_list
      (field_declaration_list_body
        (component_definition
          (user_type_identifier)
          (field_declaration_list
            (field_declaration_list_body
              (variable_set_equal
                (var_identifier)
                (assignment_prec_operator)
                (unary_expression
                  (unary_prec_operator)
                  (ternary_expression
                    (ternary_expression
                      (var_identifier
                        (post_identifier))
                      (value
                        (color))
                      (var_identifier
                        (post_identifier)))
                    (value
                      (color))
                    (value
                      (color))))))))))))

================================================================================
Arrays as expressions
================================================================================

Example := Window {
    property<[int]> list-of-int: [1,2,3];
}

--------------------------------------------------------------------------------

================================================================================
String expression
================================================================================

Example := Text {
    text: "hello";
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (user_type_identifier)
    (user_type_identifier)
    (field_declaration_list
      (field_declaration_list_body
        (variable_set_equal
          (var_identifier)
          (assignment_prec_operator)
          (string
            (string_fragment)))))))

================================================================================
Color expression 3 char
================================================================================

Example := Window {
    property<color> c1: #f33;
}

--------------------------------------------------------------------------------

(source_file
      (component_definition
        (user_type_identifier)
        (user_type_identifier)
        (field_declaration_list
          (field_declaration_list_body
            (property_definition
              (user_type_identifier)
              (var_identifier)
              (property_expr
                (value
                  (color))))))))

================================================================================
Color expression 4 char
================================================================================

Example := Window {
    property<color> c1: #f330;
}

--------------------------------------------------------------------------------

(source_file
      (component_definition
        (user_type_identifier)
        (user_type_identifier)
        (field_declaration_list
          (field_declaration_list_body
            (property_definition
              (user_type_identifier)
              (var_identifier)
              (property_expr
                (value
                  (color))))))))

================================================================================
Color expression 6 char
================================================================================

Example := Window {
    property<color> c1: #f33444;
}

--------------------------------------------------------------------------------

(source_file
      (component_definition
        (user_type_identifier)
        (user_type_identifier)
        (field_declaration_list
          (field_declaration_list_body
            (property_definition
              (user_type_identifier)
              (var_identifier)
              (property_expr
                (value
                  (color))))))))

================================================================================
Color expression 8 char
================================================================================

Example := Window {
    property<color> c1: #ffffff88;
}

--------------------------------------------------------------------------------

(source_file
      (component_definition
        (user_type_identifier)
        (user_type_identifier)
        (field_declaration_list
          (field_declaration_list_body
            (property_definition
              (user_type_identifier)
              (var_identifier)
              (property_expr
                (value
                  (color))))))))

================================================================================
Brush expression
================================================================================

Example := Window {
    property<brush> b2: Colors.red;
}

--------------------------------------------------------------------------------

(source_file
      (component_definition
        (user_type_identifier)
        (user_type_identifier)
        (field_declaration_list
          (field_declaration_list_body
            (property_definition
              (builtin_type_identifier)
              (var_identifier)
              (property_expr
                (var_identifier
                  (post_identifier))))))))

================================================================================
Function expression
================================================================================

Example := Window {
    property<brush> b2: brighter(55);
}

--------------------------------------------------------------------------------

(source_file
      (component_definition
        (user_type_identifier)
        (user_type_identifier)
        (field_declaration_list
          (field_declaration_list_body
            (property_definition
              (builtin_type_identifier)
              (var_identifier)
              (property_expr
                (function_call
                  (function_identifier)
                  (call_signature
                    (formal_parameters
                      (formal_parameter
                        (value
                          (number
                            (int_number)))))))))))))

================================================================================
Image expression
================================================================================

Example := Window {
    some_image: @image-url("https://slint-ui.com/logo/slint-logo-full-light.svg");
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (user_type_identifier)
    (user_type_identifier)
    (field_declaration_list
      (field_declaration_list_body
        (variable_set_equal
          (var_identifier)
          (assignment_prec_operator)
          (function_call
            (function_identifier)
            (call_signature
              (formal_parameters
                (formal_parameter
                  (string
                    (string_fragment)))))))))))

================================================================================
Empty expression
================================================================================

Example := Window {
    clicked => { }
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (user_type_identifier)
    (user_type_identifier)
    (field_declaration_list
      (field_declaration_list_body
        (callback_event
          (function_identifier)
          (field_declaration_list
            (field_declaration_list_body)))))))

================================================================================
Empty expression with semi-colon
================================================================================

Example := Window {
    clicked => { ; }
}

--------------------------------------------------------------------------------
